@@ -48,7 +48,13 @@
  * Pre-processor Definitions
  ****************************************************************************/
 
-#define MAXEXP 308
+#ifndef MIN
+#  define MIN(a,b) (a < b ? a : b)
+#endif
+
+#ifndef MAX
+#  define MAX(a,b) (a > b ? a : b)
+#endif
 
 /****************************************************************************
  * Private Type Declarations
@@ -57,10 +63,6 @@
 /****************************************************************************
  * Private Function Prototypes
  ****************************************************************************/
-
-static char* cvt(double value, int ndigits, int flags, char *sign,
-                 int *decpt, int ch, int *length);
-static int   exponent(char *p0, int exp, int fmtch);
 
 /****************************************************************************
  * Global Constant Data
@@ -79,268 +81,122 @@ static int   exponent(char *p0, int exp, int fmtch);
  ****************************************************************************/
 
 /****************************************************************************
+ * Name: zeroes
+ *
+ * Description:
+ *   Print the specified number of zeres
+ *
+ ****************************************************************************/
+
+static void zeroes(FAR struct lib_outstream_s *obj, int nzeroes)
+{
+  int i;
+
+  for (i = nzeroes; i > 0; i--)
+    {
+      obj->put(obj, '0');
+    }
+}
+
+/****************************************************************************
  * Private Functions
  ****************************************************************************/
-
-/****************************************************************************
- * Name: cvt
- ****************************************************************************/
-
-static char* cvt(double value, int ndigits, int flags, char *sign,
-                 int *decpt, int ch, int *length)
-{
-  int mode, dsgn;
-  char *digits, *bp, *rve;
-
-  if (ch == 'f')
-    {
-      mode = 3;               /* ndigits after the decimal point */
-    }
-  else
-    {
-      /* To obtain ndigits after the decimal point for the 'e' and 'E'
-       * formats, round to ndigits + 1 significant figures.
-       */
-
-      if (ch == 'e' || ch == 'E')
-        {
-          ndigits++;
-        }
-      mode = 2;               /* ndigits significant digits */
-    }
-
-  if (value < 0)
-    {
-      value = -value;
-      *sign = '-';
-    }
-  else
-    {
-      *sign = '\000';
-    }
-
-  digits = __dtoa(value, mode, ndigits, decpt, &dsgn, &rve);
-  if ((ch != 'g' && ch != 'G') || IS_ALTFORM(flags))
-    {
-      /* Print trailing zeros */
-
-      bp = digits + ndigits;
-      if (ch == 'f')
-        {
-          if (*digits == '0' && value)
-            {
-              *decpt = -ndigits + 1;
-            }
-          bp += *decpt;
-        }
-
-      if (value == 0)
-        {
-          /* kludge for __dtoa irregularity */
-
-          rve = bp;
-        }
-
-      while (rve < bp)
-        {
-          *rve++ = '0';
-        }
-    }
-
-  *length = rve - digits;
-  return digits;
-}
-
-/****************************************************************************
- * Name: exponent
- ****************************************************************************/
-
-static int exponent(FAR char *p0, int exp, int fmtch)
-{
-  FAR char *p;
-  FAR char *t;
-  char expbuf[MAXEXP];
-
-  p = p0;
-  *p++ = fmtch;
-  if (exp < 0)
-    {
-      exp = -exp;
-      *p++ = '-';
-    }
-  else
-    {
-      *p++ = '+';
-    }
-
-  t = expbuf + MAXEXP;
-  if (exp > 9)
-    {
-      do
-        {
-          *--t = (exp % 10) + '0';
-        }
-      while ((exp /= 10) > 9);
-      *--t = exp + '0';
-      for (; t < expbuf + MAXEXP; *p++ = *t++);
-    }
-  else
-    {
-      *p++ = '0';
-      *p++ = exp + '0';
-    }
-  return (p - p0);
-}
 
 /****************************************************************************
  * Name: lib_dtoa
  *
  * Description:
  *   This is part of lib_vsprintf().  It handles the floating point formats.
+ *   This version supports only the &f (with precision).
  *
  ****************************************************************************/
 
-static void lib_dtoa(FAR struct lib_outstream_s *obj, int ch, int prec,
-                     uint8_t flags, double _double)
+static void lib_dtoa(FAR struct lib_outstream_s *obj, int fmt, int prec,
+                     uint8_t flags, double value)
 {
-  FAR char *cp;              /* Handy char pointer (short term usage) */
-  FAR char *cp_free = NULL;  /* BIONIC: copy of cp to be freed after usage */
-  char expstr[7];            /* Buffer for exponent string */
-  char sign;                 /* Temporary negative sign for floats */
-  int  expt;                 /* Integer value of exponent */
-  int  expsize = 0;          /* Character count for expstr */
-  int  ndig;                 /* Actual number of digits returned by cvt */
-  int  size;                 /* Size of converted field or string */
+  FAR char *digits;     /* String returned by __dtoa */
+  FAR char *digalloc;   /* Copy of digits to be freed after usage */
+  FAR char *rve;        /* Points to the end of the return value */
+  char sign;            /* Temporary negative sign for floats */
+  int  expt;            /* Integer value of exponent */
+  int  numlen;          /* Actual number of digits returned by cvt */
+  int  nchars;          /* Number of characters to print */
+  int  dsgn;            /* Unused sign indicator */
   int  i;
 
-  cp = cvt(_double, prec, flags, &sign, &expt, ch, &ndig);
-  cp_free = cp;
+  /* Non-zero... positive or negative */
 
-  if (ch == 'g' || ch == 'G')
+  if (value < 0)
     {
-      /* 'g' or 'G' fmt */
-
-      if (expt <= -4 || expt > prec)
-        {
-          ch = (ch == 'g') ? 'e' : 'E';
-        }
-      else
-        {
-          ch = 'g';
-        }
-    }
-
-  if (ch <= 'e')
-    {
-      /* 'e' or 'E' fmt */
-
-      --expt;
-      expsize = exponent(expstr, expt, ch);
-      size = expsize + ndig;
-      if (ndig > 1 || IS_ALTFORM(flags))
-        {
-          ++size;
-        }
-    }
-  else if (ch == 'f')
-    {
-      /* f fmt */
-
-      if (expt > 0)
-        {
-          size = expt;
-          if (prec || IS_ALTFORM(flags))
-            {
-              size += prec + 1;
-            }
-        }
-      else  /* "0.X" */
-        {
-            size = prec + 2;
-        }
-    }
-  else if (expt >= ndig)
-    {
-      /* fixed g fmt */
-
-      size = expt;
-      if (IS_ALTFORM(flags))
-        {
-          ++size;
-        }
+      value = -value;
+      sign = '-';
     }
   else
     {
-      size = ndig + (expt > 0 ? 1 : 2 - expt);
+      sign = '\0';
     }
+
+  /* Perform the conversion */
+
+  digits   = __dtoa(value, 3, prec, &expt, &dsgn, &rve);
+  digalloc = digits;
+  numlen   = rve - digits;
 
   if (sign)
     {
       obj->put(obj, '-');
     }
 
-  if (_double == 0)
+   /* Always print at least one digit to the right of the decimal point. */
+
+   prec = MAX(1, prec);
+
+  /* Special case exact zero or the case where the number is smaller than
+   * the print precision.
+   */
+
+  if (value == 0 || expt < -prec)
     {
       /* kludge for __dtoa irregularity */
 
       obj->put(obj, '0');
-      if (expt < ndig || IS_ALTFORM(flags))
-        {
-          obj->put(obj, '.');
-
-          i = ndig - 1;
-          while (i > 0)
-            {
-              obj->put(obj, '0');
-              i--;
-            }
-        }
+      obj->put(obj, '.');
     }
   else if (expt <= 0)
     {
       obj->put(obj, '0');
       obj->put(obj, '.');
 
-      i = ndig;
-      while (i > 0)
+      /* Print leading zeros */
+
+      if (expt < 0)
         {
-          obj->put(obj, *cp);
-          i--;
-          cp++;
+          nchars = MIN(-expt, prec);
+          zeroes(obj, nchars);
+          prec -= nchars;
         }
-    }
-  else if (expt >= ndig)
-    {
-      i = ndig;
-      while (i > 0)
+                  
+      /* Print the significant digits */
+
+      nchars = MIN(numlen, prec);
+      for (i = nchars; i > 0; i--)
         {
-          obj->put(obj, *cp);
-          i--;
-          cp++;
+          obj->put(obj, *digits);
+          digits++;
         }
 
-      i = expt - ndig;
-      while (i > 0)
-        {
-          obj->put(obj, '0');
-          i--;
-        }
+      /* Decremnt to get the number of trailing zeroes to print */
 
-      if (IS_ALTFORM(flags))
-        {
-          obj->put(obj, '.');
-        }
+      prec -= nchars;
     }
   else
     {
-      /* Print the integer */
+      /* Print the integer part */
 
-      i = expt;
-      while (i > 0)
+      for (i = expt; i > 0; i--)
         {
-          obj->put(obj, *cp);
-          i--;
-          cp++;
+          obj->put(obj, *digits);
+          digits++;
         }
 
       /* Print the decimal place */
@@ -349,14 +205,32 @@ static void lib_dtoa(FAR struct lib_outstream_s *obj, int ch, int prec,
 
       /* Print the decimal */
 
-      i = ndig - expt;
-      while (i > 0)
+      numlen -= expt;
+      nchars = MIN(numlen, prec);
+
+      for (i = nchars; i > 0; i--)
         {
-          obj->put(obj, *cp);
-          i--;
-          cp++;
+          obj->put(obj, *digits);
+          digits++;
         }
+
+      /* Decremnt to get the number of trailing zeroes to print */
+
+      prec -= nchars;
     }
+
+  /* Finally, print any trailing zeroes */
+
+  zeroes(obj, prec);
+
+  /* Is this memory supposed to be freed or not? */
+
+#if 0
+  if (digalloc)
+    {
+      free(digalloc);
+    }
+#endif
 }
 
 /****************************************************************************
